Add initial support for transaction commands, update user guide, and add new stubs/todos to existing files in model

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -78,7 +78,7 @@ Format: `view sort s/<a|c|d|x> [o/<a|d>]`
 
 Adds a new transaction of the specified amount and with the given description.
 
-Format: `transaction out|in x/<amount> d/<description> [a/<account>] [c/<category>] [w/<date>] [r/<d|w|m|y>]`
+Format: `transaction add out|in x/<amount> d/<description> [a/<account>] [c/<category>] [w/<date>] [r/<d|w|m|y>]`
 ****
 * If the account is not given, the transaction is inserted into the default account.
 * If the category is not given, the transaction is not categorised.
