Fix image not showing in github website (#26)

--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@ image::docs/images/Ui.png[width="600"]
 endif::[]
 
 ifndef::env-github[]
-image::docs/images/Ui.png[width="600"]
+image::images/Ui.png[width="600"]
 endif::[]
 
 * ModuleBook is a module planning application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
