--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -14,8 +14,9 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 image::divinedx.png[width="150", align="left"]
 {empty}[https://github.com/DivineDX[github]] [<<divinedx#, portfolio>>]
 
-Role: Team Lead, In Charge of Event Management Component & Scheduling and Tracking +
-Responsibilities: Responsible for overall project coordination and in charge of defining, assigning, tracking project tasks and handling events in our app.
+Role: Team Lead +
+Project Responsibilities: In charge of defining, assigning, and tracking project tasks and responsible for overall project coordination +
+Code Responsibilities: Event Management
 
 '''
 
@@ -23,8 +24,9 @@ Responsibilities: Responsible for overall project coordination and in charge of 
 image::shihaoyap.png[width="150", align="left"]
 {empty}[https://github.com/shihaoyap[github]] [<<shihaoyap#, portfolio>>]
 
-Role: In Charge of Documentation & Deliverables and Deadlines
-Responsibilities: Responsible for the quality of various project documents and ensure project deliverables are done on time and in the right format.
+Role: Software Developer +
+Project Responsibilities: Responsible for documentation quality and ensure project deliverables are done on time and in the right format. +
+Code Responsibilities: Schedule Management
 
 '''
 
@@ -32,8 +34,9 @@ Responsibilities: Responsible for the quality of various project documents and e
 image::eshwarkp.png[width="150", align="left"]
 {empty}[https://github.com/eshwarkp[github]] [<<eshwarkp#, portfolio>>]
 
-Role: In Charge of Manpower Allocation Component & Testing +
-Responsibilities: Ensures the testing of the project is done properly and on time and handles the automatic allocation of manpower in the app.
+Role: Software Developer +
+Responsibilities: Ensures and implement rigorous testing of project features and code +
+Code Responsibilities: Statistics Generator
 
 '''
 
@@ -41,8 +44,9 @@ Responsibilities: Ensures the testing of the project is done properly and on tim
 image::calvincxz.png[width="150", align="left"]
 {empty}[https://github.com/calvincxz[github]] [<<calvincxz#, portfolio>>]
 
-Role: In Charge of Manpower Allocation Component & Code quality +
-Responsibilities: Looks after code quality, ensures adherence to coding standards, etc and handles the manual allocation of manpower in the app.
+Role: Software Developer +
+Responsibilities: Ensures code quality and standards +
+Code Responsibilities: Employee-Event Manpower Allocation
 
 '''
 
@@ -50,7 +54,8 @@ Responsibilities: Looks after code quality, ensures adherence to coding standard
 image::crisgu.png[width="150", align="left"]
 {empty}[https://github.com/Crisgu[github]] [<<crisgue#, portfolio>>]
 
-Role: In Charge of Manpower Management Component & Integration +
-Responsibilities: In charge of managing the manpower, versioning of the code, maintaining the code repository, integrating various parts of the software to create a whole.
+Role: Software Developer +
+Responsibilities: In charge of versioning of the code, maintaining the code repository and integration of software. +
+Code Responsibilities: Finance Management
 
 '''
