Update user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -70,14 +70,23 @@ Format: `help`
 === Adding an item: `add`
 
 Adds item to list +
-Format: `add|<item name>|<expiry date>`
+Format: `add|<item name>|<expiry date>[|<quantity>]`
 
 Examples:
 
-* `add|durian|30/09/2019` (without tags) +
-Adds the item `durian` with expiry date `30/09/2019`
+* `add|durian|30/09/2020` (without quantity) +
+Adds the item `durian` with expiry date `30/09/2019` with quantity `1`
 
-//* `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 t/criminal`
+* `add|ice cream|18/8/2020|2` +
+Adds the item `ice cream` with expiry date `18/08/2019` with quantity `2`
+
+****
+* Item quantity **must be a positive integer** 1,2,3...
+* When not specified, the item quantity is assumed to be 1.
+****
+
+[TIP]
+For items with single quantity, you can save time by keying in only the item name and expiry date.
 
 === Listing all items : `view`
 
@@ -103,26 +112,6 @@ Examples:
 Sets a reminder for the second item in the list 4 days before its expiry date.
 * `set|1|0` +
 Removes the reminder for the first item in the list.
-
-//=== Editing an item : `edit`
-
-//Edits an existing item in the list. +
-//Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
-//
-//****
-//* Edits the item at the specified `INDEX`. The index refers to the index number shown in the displayed person list. The index *must be a positive integer* 1, 2, 3, ...
-//* At least one of the optional fields must be provided.
-//* Existing values will be updated to the input values.
-//* When editing tags, the existing tags of the person will be removed i.e adding of tags is not cumulative.
-//* You can remove all the person's tags by typing `t/` without specifying any tags after it.
-//****
-//
-//Examples:
-//
-//* `edit 1 p/91234567 e/johndoe@example.com` +
-//Edits the phone number and email address of the 1st person to be `91234567` and `johndoe@example.com` respectively.
-//* `edit 2 n/Betsy Crower t/` +
-//Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
 
 === Listing expiring items : `check`
 
@@ -182,12 +171,15 @@ Returns `Chicken Kebab` and `kebab`
 Returns any items containing the terms `milk`, `tea`, or `pearls`
 
 // tag::delete[]
-=== Deleting an item : `delete`
+=== Deleting items, tags or quantity : `delete`
 
 Deletes the specified item from the list or deletes tag(s) from the specified item. +
 Format: `delete|<index>` +
 OR +
-Format: `delete|<index>|<tag>[<other tags>]...`
+Format: `delete|<index>|<tag>[<other tags>]...` +
+OR +
+Format `delete|<index>|<quantity>`
+
 
 ****
 * Deletes the item at the specified `<index>`.
@@ -195,11 +187,13 @@ Format: `delete|<index>|<tag>[<other tags>]...`
 * The index *must be a positive integer* 1, 2, 3, ...
 * Tags must be prefixed with a '#'.
 * The item must contain the tags to be deleted.
+* The quantity *must be a positive integer* 1, 2 ,3...
+* The quantity specified must be more than the item's current quantity.
 ****
 
 Examples:
 
-* `list` +
+* `view` +
 `delete|2` +
 Deletes the 2nd item in the list.
 * `sort|name` +
@@ -208,9 +202,12 @@ Deletes the 3rd item in the sorted list.
 * `search|potato` +
 `delete|1` +
 Deletes the 1st item in the results of the `search` command.
-* `list` +
+* `view` +
 `delete|3|#Fruit #Food` +
 Deletes the tags `#Fruit` and `#Food` from the 3rd item in the list.
+* `view` +
+`delete|4|1` +
+Reduces the quantity from the 4th item by 1.
 
 // end::delete[]
 
@@ -232,7 +229,7 @@ Format: `tag|<index>|<tag>[<other tags>]...`
 
 Examples:
 
-* `list` +
+* `view` +
 `tag|2|#Nestle #Caffeine` +
 Tags the 2nd item in the list with `#Nestle` and `#Caffeine`.
 
@@ -278,8 +275,6 @@ e.g. `set reminder|1|7`
 e.g. `check|20`
 * *Sort* : `sort|<key>` +
 e.g. `sort|date`
-//* *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
-//e.g. `edit 2 n/James Lee e/jameslee@example.com`
 * *Search* : `search|<keyword>[|<other keywords>]...` +
 e.g. `search|milk|tea|pearls`
 * *Delete* : `delete|<index>` +
